# libnss-role

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  GetText.cpp  GetText.h  GroupReader.cpp  GroupReader.h  LockFile.cpp  LockFile.h  PamCheck.cpp  PamCheck.h  README-ru.md  README.md  RoleCommon.cpp  RoleCommon.h  RoleError.h  RoleManager.cpp  RoleManager.h  RoleParser.cpp  RoleParser.h  RoleParserSimple.cpp  RoleParserSimple.h  RoleStorage.cpp  RoleStorage.h  SConstruct  UserReader.cpp  UserReader.h  Version.h  common.c  graph.c  groupReader.cpp  groupReader.h  libnss-role.control  libnss-role.spec  lockFile.cpp  lockFile.h  lock_file.c  nss_role.c  (+24 more)
.gear/: libnss-role-0.4.1-alt-scons304.patch  libnss-role.spec  rules
.github/workflows/: codeql-analysis.yml
doc/: roleadd.8  roledel.8
include/Role/: GroupReader.h  RoleCommon.h  RoleError.h  RoleManager.h  RoleParser.h  RoleStorage.h  Version.h  glob.h  lock_file.h  parser.h  version.h
include/role/: fileop.h  fileop_rw.h  glob.h  lock_file.h  pam_check.h  parser.h  paths.h  version.h
src/: checkver.c  common.c  fileop.c  fileop_rw.c  graph.c  lock_file.c  nss_role.c  pam_check.c  parser.c  paths.c  roleadd.c  roledel.c  rolelst.c
test/: CMakeLists.txt  test_config.h.in  test_main.c  test_parser.c  test_paths.c
test/data/: broken_role.role  group  passwd  role_file.role
test/include/: test_parser.h  test_paths.h
